@@ -12,6 +12,8 @@ git-annex (5.20140128) UNRELEASED; urgency=medium
   * sync --content: Re-pull from remotes after downloading content,
     since that can take a while and other changes may be pushed in the
     meantime.
+  * Added ways to configure rsync options to be used only when uploading
+    or downloading from a remote. Useful to eg limit upload bandwidth.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 28 Jan 2014 13:57:19 -0400
 
